--- a/src/main/resources/static/Templates/help.html
+++ b/src/main/resources/static/Templates/help.html
@@ -6,17 +6,30 @@
         <hr class="mt-2">
 
 
+        <!--<div class="text-center ng-hide" ng-show="ur == 'DEANERY'">-->
+        <!--</div>-->
+
         <div class="text-center ng-hide" ng-show="ur == 'DEANERY'">
-            Чтобы создать аттестацию,<br>
+            Для просмотра ведомостей аттестаций,<!--текущей ситуации,--><br>
+            <!--связанной с проведением аттестаций,<br>-->
+            включая те, дедлайн которых уже прошёл,<br>
             перейдите в раздел
-            <a class="bold text-info" ui-sref="arrangeCertification">
-                <b>"Устроить аттестацию"</b>,
+            <a class="bold text-info" ui-sref="statements">
+                <b>"Ведомости"</b>
             </a>
-            <br>
-            выберите <b title="Дедлайн">крайнюю дату</b> внесения изменений <br>
-            (преподаватель сможет вносить изменения<br>
-            до 03.00 по мск выбранного дня)<br>
-            и введите <b>название аттестации</b>.<br>
+            .<br>
+            В данном разделе имеется возможность<br>
+            создать аттестацию. Для этого необходимо<br>
+             перейти в раздел
+            <a class="bold text-info" ui-sref="arrangeCertification">
+                <b>"Добавить аттестацию"</b>
+            </a>
+            ,<br>
+            нажав на кнопку <b>"+"</b>,
+            выбрать <b title="Дедлайн">крайнюю дату</b> <br>
+            внесения изменений (преподаватель сможет<br>
+            редактировать ведомости до 01.00 по мск<br>
+            выбранного дня) и ввести <b>название аттестации</b>.<br>
             <i>
                 В названии рекомендуется уточнить,<br>
                 в какое время года проводится аттестация<br>
@@ -27,41 +40,30 @@
 
         <div class="text-center ng-hide" ng-show="ur == 'DEANERY'">
             <br>
-            Для просмотра текущей ситуации,<br>
-            связанной с проведением аттестаций,<br>
-            перейдите в раздел
-            <a class="bold text-info" ui-sref="statements">
-                <b>"Ведомости"</b>
-            </a>
-            <br>
-        </div>
-
-        <div class="text-center ng-hide" ng-show="ur == 'DEANERY'">
-            <br>
-            Для того чтобы отметить<br>
-            отчисленных студентов необходимо<br>
-            перейти в раздел
+            Для того чтобы отметить отчисленных<br>
+            студентов, необходимо перейти в раздел<br>
             <a class="bold text-info" ui-sref="students">
                 <b>"Студенты"</b>
             </a>
-             и выбрать группу,<br>
-            далее в выведенном списке обозначить<br>
-            надлежащих студентов как отчисленных,<br>
-            поставив галочку напротив них.<br>
-            Для сохранения внесённых изменений необходимо<br>
+             и выбрать группу, далее в<br>
+            выведенном списке обозначить надлежащих<br>
+            студентов как отчисленных, поставив<br>
+            галочку напротив них. Для сохранения<br>
+            внесённых изменений необходимо<br>
             нажать на кнопку <b>"Сохранить изменения"</b>.
             <br>
         </div>
 
         <div class="text-center ng-hide" ng-show="ur == 'TEACHER'">
-            Для заполнения ведомостей текущей аттестации,<br>
-            необходимо перейти в раздел
+            Для заполнения ведомостей<br>
+            текущей аттестации, необходимо<br>
+            перейти в раздел
             <a class="bold text-info" ui-sref="attestation">
-                <b>"Заполнение ведомостей"</b>.
+                <b>"Заполнение ведомостей"</b>
             </a>
-            <br>
-            Далее необходимо перейти<br>
-            на страницу ведомости выбранной (под)группы,<br>
+            .<br>
+            Далее необходимо перейти на страницу<br>
+            ведомости выбранной (под)группы,<br>
             и после внесения изменений<br>
             нажать на кнопку <b>"Сохранить"</b>.
             <br>
@@ -71,9 +73,9 @@
             Для создания подгруппы<br>
             необходимо перейти в раздел
             <a class="bold text-info" ui-sref="addSubgroup">
-                <b>"Добавить подгруппу"</b>,
+                <b>"Добавить подгруппу"</b>
             </a>
-            <br>
+            ,<br>
             выбрать группу и нажать на кнопку <b>"Добавить"</b>.<br>
             Студенты данной группы будут добавлены в <i>"Общий список"</i>.<br>
             Для формирования <i>"Списка новой подгруппы"</i><br>
@@ -88,25 +90,36 @@
 
         <div class="text-center ng-hide" ng-show="ur == 'SECRETARY'">
             <br>
-            Чтобы "связать" группу или<br>
-            подгруппу с преподавателем,<br>
-            необходимо перейти в раздел<br>
+            <!--настроить списки ("связать" группу или подгруппу с преподавателем по опр. дисциплине),
+            в данном разделе также отображается список студентов (под)группы и (должен будет отображаться)
+            список всех дисциплин с назначенными преподавателями для конкретной (под)группы по выбранной аттестации,
+            дедлайн которой ещё не прошёл.-->
+            Чтобы "связать" группу или подгруппу<br>
+            с преподавателем по определённой<br>
+            дисциплине необходимо перейти в раздел<br>
             <a class="bold text-info" ui-sref="link">
-                <b>"Связать (под)группу и преподавателя"</b>.
+                <b>"Настроить списки"</b>
             </a>
-            <br>
+            .<br>
             На данной странице есть возможность<br>
-            просмотреть содержимое (под)группы,<br>
-            а также выбрать преподавателя<br>
-            по каждой дисциплине.
+            просмотреть содержимое (под)группы и<br>
+            список всех дисциплин с назначенными<br>
+            преподавателями для конкретной<br>
+            (под)группы по выбранной аттестации.
             <br>
         </div>
 
         <hr>
         <div class="text-center mb-3">
             Вопросы и пожелания<br>
-            принимаются по почте<br>
-            <b>saitVoenmeh@voenmeh.ru</b>
+            принимаются по электронной почте<br>
+            <a class="bold text-info" href="https://mail.voenmeh.ru/mail/?_task=mail&_action=compose">
+                <b>dekanat_i@voenmeh.ru</b>
+            </a>
+            или
+            <a class="bold text-info" href="https://mail.voenmeh.ru/mail/?_task=mail&_action=compose">
+                <b>bondarev_es@voenmeh.ru</b>
+            </a>
         </div>
         <br>
 
