--- a/src/main/resources/static/Templates/subject.html
+++ b/src/main/resources/static/Templates/subject.html
@@ -9,17 +9,54 @@
 
     <!--Группы       Последние изменения были сделаны (дата)-->
     <!--Подгруппы    Внимание! Ведомость не заполнена.-->
-    <div class="my-5 py-5 card col-md-10 mx-auto">
-        <div class="font-weight-bold h4 text-center">
+    <div class="my-3 pb-3 card col-md-10 mx-auto border-info p-0">
+        <div class="font-weight-bold h4 text-center my-4">
             Группы
         </div>
 
-       <div class="text-center" ng-if="groups.length">
+        <div ng-if="groups.length">
+            <table class="table table-hover table-striped table-sm table-responsive-lg">
+                <thead>
+                <tr>
+                    <th class="text-center"></th>
+                    <th class="text-center">Номер группы</th>
+                    <th class="text-center">Форма работы</th>
+                    <th class="text-center">Предмет</th>
+                    <th class="text-center"></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="group in groups | orderBy:'groupNumber' track by $index">
+                    <td class="text-center border-info">
+                        <i class="text-warning fa fa-2x fa-exclamation px-2" ng-if="group.finished" data-toggle="tooltip" data-placement="top"
+                           title="Внимание! В ведомости остались незаполненные поля">
+                        </i>
+                    </td>
+                    <td class="text-center border-info">{{group.groupNumber}}</td>
+                    <td class="text-center border-info">{{group.form_of_workName}}</td>
+                    <td class="text-center border-info">{{group.disciplineName}}</td>
+                    <td class="text-center border-info">
+                        <button class="btn btn-md btn-info text-white"
+                                type="button"
+                                ui-sref="contentAttestation({id: group.certificationAttestationId, attestationId: group.attestationId})"
+                                title="Редактировать ведомость группы">
+                            <i class="fa fa-share-square-o"></i>
+                        </button>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+
+       <!--<div class="text-center" ng-if="groups.length">
            <hr>
-           <!-- head -->
-           <div class="row my-3">
+           &lt;!&ndash; head &ndash;&gt;
+           <div class="row m-2">
                <div class="col-lg">
                    <b>Номер группы</b>
+               </div>
+               <div class="col-lg">
+                   <b>Форма работы</b>
                </div>
                <div class="col-lg-6">
                    <b>Предмет</b>
@@ -27,11 +64,14 @@
                <div class="col-lg"></div>
            </div>
 
-           <!-- body -->
+           &lt;!&ndash; body &ndash;&gt;
             <div ng-repeat="group in groups | orderBy:'id'">
                <div class="row border border-dark m-2">
                    <div class="col-lg my-auto">
                        {{group.groupNumber}}
+                    </div>
+                    <div class="col-lg my-auto">
+                       {{group.form_of_workName}}
                     </div>
                     <div class="col-lg-6 my-auto">
                         {{group.disciplineName}}
@@ -47,58 +87,61 @@
                     </div>
                 </div>
             </div>
-       </div>
+       </div>-->
 
 
         <div class="ng-hide font-weight-bold text-center m-2 p-2 alert-warning" ng-show="!groups.length">
-            На данный момент группы, в которых Вы преподаёте, отсутствуют
+            <!--На данный момент группы, в которых Вы преподаёте, отсутствуют-->
+            На данный момент ведомости групп отсутствуют
         </div>
 
-
-        <!--<table class="table table-hover table-container my-5" ng-if="groups.length">
-            <tr>
-                <th class="text-center w-50">Название</th>
-                <th class="text-center w-25">Крайний срок сдачи
-                    <br>(не включая)
-                    <i class="fa fa-info-circle text-info" title="Нажмите для вывода справки" ng-click="toasterInfo('Справка!',
-                    'Если дедлайн поставлен на 02.09.2020, то изменения можно внести до 03.00 мск 02.09.2020')"></i>
-                </th>
-                <th class="w-25"></th>
-            </tr>
-            <tr ng-repeat="group in groups | orderBy:'id'" class="border-top">
-                <td class="text-center">{{group.groupNumber}}</td>
-                <td class="text-center">
-                    {{group.disciplineName}}
-                </td>
-                <td class="text-center py-3">
-                    &lt;!&ndash;<a class="btn btn-info text-white"
-                       type="button"
-                       data-toggle="modal" data-target="#successModal"
-                       ng-click="addTo(medicine.id)"
-                       ng-show="ur == 'USER'">
-                        Добавить в
-                    </a>&ndash;&gt;
-                    <a class="btn btn-info text-white"
-                       type="button"
-                       ui-sref="fill.subject({id:attestation.id})"
-                       title="Редактировать ведомость группы">
-                        Ведомость
-                    </a>
-                </td>
-            </tr>
-        </table>-->
-
-        <div class="font-weight-bold h4 text-center mt-4">
+        <div class="font-weight-bold h4 text-center my-4">
             Подгруппы
         </div>
 
+        <div ng-if="subgroups.length">
+            <table class="table table-hover table-striped table-sm table-responsive-lg">
+                <thead>
+                <tr>
+                    <th class="text-center"></th>
+                    <th class="text-center">Название подгруппы</th>
+                    <th class="text-center">Форма работы</th>
+                    <th class="text-center">Предмет</th>
+                    <th class="text-center"></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="subgroup in subgroups | orderBy:'subgroupName' track by $index">
+                    <td class="text-center border-info">
+                        <i class="text-warning fa fa-2x fa-exclamation px-2" ng-if="subgroup.finished" data-toggle="tooltip" data-placement="top"
+                           title="Внимание! В ведомости остались незаполненные поля">
+                        </i>
+                    </td>
+                    <td class="text-center border-info">{{subgroup.subgroupName}}</td>
+                    <td class="text-center border-info">{{subgroup.form_of_workName}}</td>
+                    <td class="text-center border-info">{{subgroup.disciplineName}}</td>
+                    <td class="text-center border-info">
+                        <button class="btn btn-md btn-info text-white"
+                                type="button"
+                                ui-sref="contentAttestation({id: subgroup.certificationAttestationId, attestationId: subgroup.attestationId})"
+                                title="Редактировать ведомость группы">
+                            <i class="fa fa-share-square-o"></i>
+                        </button>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
 
-        <div class="text-center" ng-if="subgroups.length">
+        <!--<div class="text-center" ng-if="subgroups.length">
             <hr>
-            <!-- head -->
-            <div class="row my-3">
+            &lt;!&ndash; head &ndash;&gt;
+            <div class="row m-2">
                 <div class="col-lg">
-                    <b>Название подгруппы</b>
+                    <b>Название</b>
+                </div>
+                <div class="col-lg">
+                    <b>Форма работы</b>
                 </div>
                 <div class="col-lg-6">
                     <b>Предмет</b>
@@ -106,11 +149,14 @@
                 <div class="col-lg"></div>
             </div>
 
-            <!-- body -->
+            &lt;!&ndash; body &ndash;&gt;
             <div ng-repeat="subgroup in subgroups | orderBy:'id'">
                 <div class="row border border-dark m-2">
                     <div class="col-lg my-auto">
-                        {{subgroup.subgroupNumber}}
+                        {{subgroup.subgroupName}}
+                    </div>
+                    <div class="col-lg my-auto">
+                        {{subgroup.form_of_workName}}
                     </div>
                     <div class="col-lg-6 my-auto">
                         {{subgroup.disciplineName}}
@@ -126,10 +172,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
 
         <div class="ng-hide font-weight-bold text-center m-2 p-2 alert-warning" ng-show="!subgroups.length">
-            На данный момент подгруппы, в которых Вы преподаёте, отсутствуют
+            <!--На данный момент подгруппы, в которых Вы преподаёте, отсутствуют-->
+            На данный момент ведомости подгрупп отсутствуют
         </div>
 
 
